--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -50,6 +50,8 @@ jobs:
     strategy:
       matrix:
         arch: [x86_64, arm64]
+      fail-fast: true
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
@@ -60,6 +62,8 @@ jobs:
           cmake -B build-${{ matrix.arch }} \
             -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} \
             -DOPENSSL_ROOT_DIR=$(brew --prefix openssl) \
+            -DCMAKE_BUILD_TYPE=Release \
+            "-DCMAKE_C_FLAGS=-DNOSH_VERSION=\"${{needs.version.outputs.version}}\"" \
             -DVERSION=${{needs.version.outputs.version}}
       - name: Build
         run: cmake --build build-${{ matrix.arch }}
@@ -68,9 +72,24 @@ jobs:
         run: |
           test -f build-${{ matrix.arch }}/nosh
           ./build-${{ matrix.arch }}/nosh --version || true
+      - name: Upload x86_64 artifact for universal binary
+        if: matrix.arch == 'x86_64'
+        uses: actions/upload-artifact@v4
+        with:
+          name: nosh-macos-x86_64
+          path: build-x86_64/nosh
+          retention-days: 1
+      - name: Download x86_64 build
+        if: matrix.arch == 'arm64'
+        uses: actions/download-artifact@v4
+        with:
+          name: nosh-macos-x86_64
+          path: build-x86_64
       - name: Create Universal Binary
         if: matrix.arch == 'arm64'
         run: |
+          chmod +x build-x86_64/nosh
+          mkdir -p build
           lipo -create -output build/nosh \
             build-x86_64/nosh \
             build-arm64/nosh
@@ -88,13 +107,15 @@ jobs:
       - name: Install dependencies
         shell: pwsh
         run: |
-          vcpkg install readline:x64-windows mbedtls:x64-windows argon2:x64-windows dirent:x64-windows
+          vcpkg install readline:x64-windows mbedtls:x64-windows argon2:x64-windows `
+            dirent:x64-windows getopt:x64-windows
       - name: Configure CMake
         shell: pwsh
         run: |
           cmake -B build -S . `
             -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake" `
-            -DCMAKE_C_FLAGS="/D_CRT_SECURE_NO_WARNINGS /DWIN32_LEAN_AND_MEAN" `
+            -DCMAKE_C_FLAGS="/D_CRT_SECURE_NO_WARNINGS /DWIN32_LEAN_AND_MEAN /DWINVER=0x0601 /D_WIN32_WINNT=0x0601" `
+            -DCMAKE_BUILD_TYPE=Release `
             -DVERSION=${{needs.version.outputs.version}}
       - name: Build
         run: cmake --build build --config Release
