--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -61,9 +61,10 @@ jobs:
         if: matrix.arch == 'x86_64'
         run: |
           sudo mkdir -p /usr/local/bin
-          sudo ln -s /usr/bin/arch /usr/local/bin/arch
+          sudo ln -sf /usr/bin/arch /usr/local/bin/arch
           arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          /usr/local/bin/brew update
+          eval "$(/usr/local/bin/brew shellenv)"
+          arch -x86_64 /usr/local/bin/brew update
           HOMEBREW_NO_AUTO_UPDATE=1 arch -x86_64 /usr/local/bin/brew install mbedtls argon2
       - name: Configure CMake
         run: |
