--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,7 +44,14 @@ jobs:
           pip install conan
           conan profile detect
 
-      - name: Configure Conan Dependencies
+      - name: Configure Conan Dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          conan install . --output-folder=build-x86_64 --build=missing -s build_type=Release -s arch=x86_64
+          conan install . --output-folder=build-arm64 --build=missing -s build_type=Release -s arch=armv8
+
+      - name: Configure Conan Dependencies (Non-macOS)
+        if: runner.os != 'macOS'
         run: |
           conan install . --output-folder=build --build=missing -s build_type=Release
         
