--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,6 +44,27 @@ jobs:
           pip install conan
           conan profile detect --force
 
+      - name: Setup Conan Profile (Unix)
+        if: runner.os == 'Linux'
+        run: |
+          cat > default_profile << EOF
+          [settings]
+          arch=x86_64
+          build_type=Release
+          compiler=gcc
+          compiler.cppstd=gnu17
+          compiler.libcxx=libstdc++11
+          compiler.version=11
+          os=Linux
+
+          [buildenv]
+          CC=/usr/bin/gcc
+          CXX=/usr/bin/g++
+          EOF
+          
+          mkdir -p ~/.conan2/profiles/
+          mv default_profile ~/.conan2/profiles/default
+
       - name: Configure Conan Dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
