--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -38,6 +38,12 @@ jobs:
         with:
           python-version: '3.x'
           
+      - name: Install Build Tools
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential ninja-build
+
       - name: Install Conan
         run: |
           python -m pip install --upgrade pip
@@ -111,6 +117,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           cmake -B build \
+            -G Ninja \
             -DCMAKE_TOOLCHAIN_FILE=build/conan_toolchain.cmake \
             -DCMAKE_BUILD_TYPE=Release \
             -DVERSION=${{needs.version.outputs.version}}
