--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -80,7 +80,9 @@ jobs:
             -s build_type=Release \
             -s arch=x86_64 \
             -s compiler=apple-clang \
-            -s compiler.libcxx=libc++
+            -s compiler.libcxx=libc++ \
+            -g CMakeToolchain \
+            -g CMakeDeps
 
           conan install . \
             --output-folder=build-arm64 \
@@ -88,7 +90,9 @@ jobs:
             -s build_type=Release \
             -s arch=armv8 \
             -s compiler=apple-clang \
-            -s compiler.libcxx=libc++
+            -s compiler.libcxx=libc++ \
+            -g CMakeToolchain \
+            -g CMakeDeps
 
       - name: Configure Conan Dependencies (Unix)
         if: runner.os == 'Linux'
