--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,6 +44,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential ninja-build cmake gcc g++
 
+      - name: Install Build Tools (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install ninja
+
       - name: Install Conan
         run: |
           python -m pip install --upgrade pip
